tests/neg/parser-stability-5.scala
trait x0 {
x1 : {   // error
var x2
// error